pushing docker files

--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,5 +1,6 @@
-ARG version
-FROM almalinux:${version:-8}
+#ARG version
+FROM almalinux:8 
+# ${version:-8}
 ARG username
 RUN adduser $username
 USER $username
